configured appsettings json

--- a/WevoCRUD/appsettings.json
+++ b/WevoCRUD/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "UserDB",
+    "CollectionName": "Users"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
