--- a/WevoCRUD/WevoCRUD.csproj
+++ b/WevoCRUD/WevoCRUD.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
 
